--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.4",
     "mongoose": "^6.0.7"
   }
 }
